dfir_rs/tests/compile-fail-stable/surface_use_bad3.rs
../compile-fail/surface_use_bad3.rs